@@ -65,7 +65,7 @@ public class SimpleDecryptionTest extends XMLObjectBaseTestCase {
         super();
         
         encURI = EncryptionConstants.ALGO_ID_BLOCKCIPHER_AES128;
-        kekURI = EncryptionConstants.ALGO_ID_KEYTRANSPORT_RSA15;
+        kekURI = EncryptionConstants.ALGO_ID_KEYTRANSPORT_RSAOAEP;
         
         targetFile = "/data/org/opensaml/xml/encryption/SimpleDecryptionTest.xml";
     }
